# equities-xva-validation-bridge

./: .gitignore  GITHUB_HOWTO.md  README.md
.github/workflows/: build_reports.yml  pages.yml
01_robustness_svd_cholesky/: README.md
01_robustness_svd_cholesky/cpp/: pyproject.toml  setup.py
01_robustness_svd_cholesky/cpp/src/: fastops.cpp
01_robustness_svd_cholesky/notebooks/: robustness_demo.ipynb
01_robustness_svd_cholesky/python/: requirements.txt  run_robustness.py
02_uncertainty_conformal_bootstrap/: README.md
02_uncertainty_conformal_bootstrap/cpp/: pyproject.toml
02_uncertainty_conformal_bootstrap/cpp/src/: fastops.cpp
02_uncertainty_conformal_bootstrap/notebooks/: uncertainty_demo.ipynb
02_uncertainty_conformal_bootstrap/python/: requirements.txt  run_uncertainty.py
03_offset_model_weakness/: README.md
03_offset_model_weakness/cpp/: pyproject.toml
03_offset_model_weakness/python/: requirements.txt  run_offset.py
reports/: README.md
reports/offset/: README.md
reports/robustness/: README.md  summary.json
reports/uncertainty/: README.md  summary.json
tools/: make_plots.py  make_reports.sh  parse_reports.py  rebuild_notebooks.py
