[build-system]
requires = ["scikit-build-core", "pybind11", "setuptools", "wheel"]
build-backend = "scikit_build_core.build"

[project]
name = "fastops-uncertainty"
version = "0.1.0"
description = "Fast ops for conformal + bootstrap"
requires-python = ">=3.9"
dependencies = ["numpy>=1.24"]

[tool.scikit-build]
wheel.py-api = "cp312"  # allow abi3-like; adjust locally if needed
